removed maxpermsize from the maven opts